<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Tolomet</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_tolomet">Tolomet</string>
    <string name="Refresh">Update</string>
    <string name="Info">Station details</string>
    <string name="Map">Map</string>
    <string name="Settings">Settings</string>
    <string name="station_prompt">Station</string>
    <string name="summary"></string>
    <string name="Direction">Direction</string>
    <string name="DirectionHumidity">Direction &amp; Humidity</string>
    <string name="Air">Air</string>
    <string name="Humidity">Humidity</string>
    <string name="Speed">Speed</string>
    <string name="Wind">Wind</string>
    <string name="Downloading">Downloading</string>
    <string name="Progress">Progress</string>
    <string name="About">About &#8230;</string>
    <string name="Time">Time</string>
    <string name="Degrees">Degrees</string>
    <string name="Impatient">Impatient!, readings are available every</string>
    <string name="minutes">minutes</string>
    <string name="hours">hours</string>
    <string name="star">favorite</string>
    <string name="NoData">No data available</string>
    <string name="NoNetwork">No internet connection</string>
    <string name="DownloadCancelled">Download cancelled</string>
    <string name="motd">Message of the day</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="update">Update</string>
    <string name="improvements">Improvements</string>
    <string name="newversion">New version available!</string>
    <string name="menu_all">All stations</string>
    <string name="menu_ccaa">Autonomous communities</string>
    <string name="menu_reg">States</string>
    <string name="menu_country">Change country</string>
    <string name="menu_close">Close stations</string>
    <string name="menu_fav">Favorite stations</string>
    <string name="menu_index">Station index</string>
    <string name="menu_start">Start menu</string>
    <string name="select">Select</string>
    <string name="markerNorth">0º (N)</string>
    <string name="markerSouth">180º (S)</string>
    <string name="markerEast">90º (E)</string>
    <string name="markerWest">270º (W)</string>
    <string name="pref_minMarker">Marker #1</string>
    <string name="pref_maxMarker">Marker #2</string>
    <string name="pref_catWind">Wind chart</string>
    <string name="pref_catAir">Air chart</string>
    <string name="pref_speedRange">Speed range</string>
    <string name="warn_gps">Enable first the location service and try again</string>
    <string name="gps_ok">Enable</string>
    <string name="cancel">Cancel</string>
    <string name="error_gps">Unknown location</string>
    <string name="warn_fav">First you should mark some stations as starred</string>
    <string name="warn_map">, do you want to open a map with stations near to you?</string>
    <string name="fav_ok">OK</string>
    <string name="warn_near">No stations found near to your position</string>
    <string name="pref_minMarkerDefault">10</string>
    <string name="pref_maxMarkerDefault">30</string>
    <string name="pref_speedRangeDefault">40</string>
    <string name="pref_speedUnitDefault" tools:ignore="MissingTranslation">0</string>
    <string name="pref_speedUnit">Units</string>
    <string name="pref_minTemp">Minimum temperature</string>
    <string name="pref_minTempDefault">0</string>
    <string name="pref_maxTemp">Maximum temperature</string>
    <string name="pref_maxTempDefault">40</string>
    <string name="pref_minPres">Lower pressure</string>
    <string name="pref_minPresDefault">980</string>
    <string name="pref_maxPres">Higher pressure</string>
    <string name="pref_maxPresDefault">1030</string>
    <string name="pref_modes">General</string>
    <string name="pref_modeGraphs">Charts</string>
    <string name="pref_modeGraphsDefault">0</string>
    <string name="pref_modeUpdate">Readings update</string>
    <string name="pref_modeUpdateDefault">1</string>
    <string name="chart_speed">Speed</string>
    <string name="chart_speedMed">Speed Med.</string>
    <string name="chart_speedMax">Speed Max.</string>
    <string name="chart_covered">100&#37; humidity</string>
    <string name="Share">Share</string>
    <string name="ShareSubject">Look at Tolomet readings!</string>
    <string name="ShareTextPre">Tolomet readings for</string>
    <string name="ShareTextPost">!</string>
    <string name="ShareMapSubject">Look at Tolomet station map!</string>
    <string name="ShareMapPre">Tolomet stations near</string>
    <string name="ShareMapPost"></string>
    <string name="ShareApp">How do you want to share?</string>
    <string name="Report">Report</string>
    <string name="ReportSubject">Tolomet: report</string>
    <string name="ReportInfo">--- Do not remove the following lines ---</string>
    <string name="ReportGreetings">Hi Gorka!</string>
    <string name="ReportApp">How to send your report?</string>
    <string name="AddStationSubject">Tolomet: station request</string>
    <string name="WhatsApp">WhatsApp</string>
    <string name="NoWhatsApp">WhatsApp not installed</string>
    <string name="FlyMode">Flight mode</string>
    <string name="LandMode">Landed</string>
    <string name="Takeoff">Flight mode activated!</string>
    <string name="Landed">Deactivated flight mode</string>
    <string name="Charts">Charts</string>
    <string name="Loading">Loading</string>
    <string name="Browser">External browser</string>
    <string name="ShareWebPre">Information from</string>
    <string name="ShareWebMid">for</string>
    <string name="ShareWebPost"></string>
    <string name="Origin">Provider site</string>
    <string name="wpref_place">Fly spot</string>
    <string name="spot_prompt">Name</string>
    <string name="wpref_conditions">Flying constraints</string>
    <string name="min_dir_prompt">Direction from</string>
    <string name="max_dir_prompt">Direction to</string>
    <string name="min_wind_prompt">Minimum speed</string>
    <string name="max_wind_prompt">Maximum speed</string>
    <string name="max_hum_prompt">Maximum relative humidity</string>
    <string name="countries_csv">countries.csv</string>
    <string name="RedirectWeb">Would you like to visit the original website?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Help">Help</string>
    <string name="help_subject">Tolomet help</string>
    <string name="help_body">Have a look at the Tolomet manual!</string>
    <string name="pref_modeColors">Color combination</string>
    <string name="pref_modeColorsDefault">0</string>
    <string name="newdb">Station update available!</string>
    <string name="newst">New</string>
    <string name="modst">Updated</string>
    <string name="delst">Removed</string>
    <string name="pref_modeLang">Language</string>
    <string name="pref_modeLangDefault" />
    <string name="ok" tools:ignore="MissingTranslation">OK</string>
    <string name="permission_neccesary" tools:ignore="MissingTranslation">Permission required</string>
    <string name="gps_rationale" tools:ignore="MissingTranslation">GPS access is required for showing the stations close to your current location</string>
    <string name="contact_mail" tools:ignore="MissingTranslation">akrog.apps@gmail.com</string>
    <string name="storage_rationale" tools:ignore="MissingTranslation">External storage access is required for saving the screenshot to share</string>
    <string name="notification_widget" tools:ignore="MissingTranslation">Updating widgets</string>
    <string name="widget_channel_name" tools:ignore="MissingTranslation">Widget</string>
    <string name="UpdateStations">Download stations</string>
    <string name="stations">stations</string>
    <string name="author_mail" translatable="false">akrog.apps@gmail.com</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="Manual">Manual</string>
    <string name="menu_search">Search by name</string>
    <string name="intro_help">Now you can navigate between screens by clicking the Tolomet icon</string>
    <string name="Satellite">Satellite view</string>
    <string name="ShareSettingsSubject">Tolomet settings</string>
    <string name="ShareSettingsText">Here there are my custom settings</string>
    <string name="UpdateSubject">Station providers</string>
    <string name="UpdateText">Number of stations in the Tolomet database</string>
    <string name="HelpSubject">Tolomet help</string>
    <string name="HelpText">Manual page</string>
    <string name="AboutSubject">About Tolomet</string>
    <string name="AboutText" />
    <string name="do_select">Please, select a station first</string>
    <string name="spots">spots</string>
    <string name="FlySpots">Fly spots</string>
    <string name="select_app">Select an application</string>
    <string name="install_nav_app">Navigation app not found, please install one first</string>
    <string name="AddFlySpotSubject">Tolomet: add new fly spot</string>
    <string name="ElliottGreetings">Hi Elliott!</string>
    <string name="Configure">Configure</string>
    <string name="HikeFly" translatable="false"><![CDATA[Hike & fly]]></string>
    <string name="AddHikeSpotSubject">Tolomet: add new hike spot</string>
    <string name="pref_origEuskalmet">Use original Euskalmet website</string>
    <string name="pref_advanced">Advanced</string>
    <string name="pref_xctrack" translatable="false">XCTrack</string>
    <string name="pref_sendXctrack">Send XCTOD during flight mode</string>
    <string name="pref_portXctrack">UDP port</string>
    <string name="notification_xctrack">Sending to XCTrack</string>
    <string name="flying_channel_name">Flying</string>
    <string name="pref_localServer">Local server</string>
    <string name="pref_enabledLocalServer">Serve other apps (e.g. Alfapilot)</string>
    <string name="pref_portLocalServer">UDP port</string>
    <string name="server_channel_name">Server</string>
    <string name="notification_serving">Serving other apps</string>
    <string name="stop">Stop</string>
    <string name="pref_altMeteoGalicia">MeteoGalicia alternative service</string>
    <string name="cfg_update">Configuration change</string>
    <string name="notifications_rationale">Allowing notifications is recommended when communicating Tolomet with external apps</string>
    <string name="google_maps_key"></string>
</resources>
