<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_charts"
            android:icon="@drawable/ic_charts"
            android:title="@string/Charts" />

        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_map"
            android:title="@string/Map" />

        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info_outline"
            android:title="@string/Info" />

        <item
            android:id="@+id/nav_origin"
            android:icon="@drawable/ic_origin"
            android:title="@string/Origin" />
    </group>

    <item android:title="Configurar">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/Settings" />
                <item
                    android:id="@+id/nav_discover"
                    android:icon="@drawable/ic_download"
                    android:title="@string/UpdateStations" />
            </group>
        </menu>
    </item>
    <item android:title="Ayuda">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_help"
                    android:icon="@drawable/ic_help"
                    android:title="@string/Manual" />
                <item
                    android:id="@+id/nav_report"
                    android:icon="@drawable/ic_mail"
                    android:title="@string/Report" />
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_copyright_black"
                    android:title="@string/About" />
            </group>
        </menu>
    </item>
</menu>
