<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/favorite_item"
        android:title="@string/star"
        android:icon="@android:drawable/btn_star_big_off"
        android:contentDescription="@string/star"
        app:showAsAction="always" />

    <item
        android:id="@+id/refresh_item"
        android:title="@string/Refresh"
        android:icon="@android:drawable/ic_popup_sync"
        app:showAsAction="always" />

    <item
        android:id="@+id/info_item"
        android:title="@string/Info"
        android:icon="@android:drawable/ic_dialog_info"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/map_item"
        android:title="@string/Map"
        android:icon="@android:drawable/ic_dialog_map"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settings_item"
        android:title="@string/Settings"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/about_item"
        android:title="@string/About"
        android:icon="@android:drawable/ic_menu_info_details"
        app:showAsAction="never" />

</menu>