<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_spinner"
        android:title="@string/menu_fav"
        app:actionViewClass="android.widget.Spinner"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_fav"
        android:title="@string/fav_ok"
        android:icon="@drawable/ic_favorite_outline"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_refresh"
        android:title="@string/Refresh"
        android:icon="@drawable/ic_sync"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="never"/>
</menu>
